# leadr

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  test_seed.csv
.cargo/: config.toml
.github/workflows/: docs.yml  release.yml
.sqlx/: query-0426f5cadf39157867a42e41e64eacfd122b801d0f7beda196b862e54b299e53.json  query-1417971525a3c03b6c4b7b8116e1ef2a3398af90ac7a47a5957b97403eeb0f6a.json  query-2a6fbbe04af069bf159a4e714b7d35b0a05e05dab8a4c543cd02bb025b2fc663.json  query-2c3fa0f22c2917f018cd8056eb419576671d3c67c3d3969aa3022853f525e0a4.json  query-30fa1fe4d478e36c036c47041a3d45896c86b3700cac9e89d33e142f01341cf9.json  query-8df8a4e72985a23e05dae09c2c5d47264dac4bdcb4930a0f814924f760038226.json  query-8f638b99339759f27979ac6643b0e43705cc5a4866109046d2c7cc5f94c10a50.json  query-901090868914dce66c1f38168323d958184c0abac12ba129f88e662a6b1f6c74.json  query-9d4100dd3aee34531629bb7f022a25670ba25bfa73779b00296ab75d093325ad.json  query-b4342e42a8c472bc4d2fb202a6683e8d51a16e3363c53f57424f1e150b46ac34.json  query-c243bc3bbb35d7d0a4fd45a79b462a6d7f4402b1c265af998735eff22dec6244.json  query-cea7ec800e5570954c4916055b4440f887af55e67936685c2f47826002542508.json  query-e35ed73dafe8a0cfad599439156bd541a24ac3dc6e7191cd03698b279100627a.json
docs/: index.html  openapi.json
migrations/: 001_initial.sql  002_create_game_score_tables.sql  003_update_hex_id_to_alphanumeric.sql
scripts/: generate-docs.sh
src/: auth.rs  lib.rs  main.rs
src/db/: mod.rs  repository.rs  seed.rs
src/error/: mod.rs
tests/: integration_tests.rs  unit_tests.rs
(+15 files in other folders)
